--- a/src/main/resources/templates/crear_publicacion.html
+++ b/src/main/resources/templates/crear_publicacion.html
@@ -20,7 +20,7 @@
         </div>
     </nav>
 
-    <h2 class="reesplandor" style="margin: 20px 0px 5px 10px">Crear Publicacion</h2>
+    <h2 class="reesplandor" style="margin: 20px 0px 5px 10px">Crear Publicación</h2>
     
     <div th:replace="fragments/formulario.html"></div>
 
