--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,20 +1,20 @@
 body{
-    background-image: url('/images/megadeth2.png');
+    background-image: url('/images/megadeth2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
 }
 
 #fondoBienvenida{
-    background-image: url('/images/megadeth1.png');
+    background-image: url('/images/megadeth1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .titulo{
-    text-align: left;
+    text-align: center;
     color: darkred;
-    margin: 25px 0px 0px 30px;
+    margin: 25px 0px 0px 0px;
     font-size: 40px;
     font-family:string ;
     text-shadow:
@@ -110,9 +110,9 @@ body{
     bottom:0;
 }
 #scroll-perfil{
+    margin-top: 0px;
     padding-top:0px;
-    float:right;
-    width: 600px;
+    position: inherit;
 }
 .scroll::-webkit-scrollbar{
     width: 100%;
@@ -124,27 +124,36 @@ body{
     top:0; 
     right:0;
 }
-.flex{
-    display: flex;
+.mensajeExito{
+    float: right; 
+    margin: 10px;
 }
 
 @media (max-width: 900px){
+    body{
+        background-image: url('/images/megadeth2Small.jpg');
+    }
+    #fondoBienvenida{
+        background-image: url('/images/megadeth1Small.jpg');
+    }
+
     .navbarBotones {
         position:absolute;
         top:0; 
         right:0;
     }
     .scroll{
+
         overflow-y: scroll;
         width:100%;
-        position: absolute;
+        position: static;
+        margin-top: 5px;
         margin-bottom: 15px;
     }
     #scroll-perfil{
-        float: none;
-        width: 100%;
-        position: absolute;
-        margin-bottom: 15px;
+        margin-top: 0px;
+        position: inherit;
+        width:90%;
     }
     .footer {
         color: greenyellow;
@@ -164,25 +173,30 @@ body{
         padding-top: 3px;
         font-size: 80%;
     }
-}
+    .mensajeExito{
+        float: right; 
+        margin: 0px;
+        clear:both;
+    }
 
 
-.temblor{
-}
-@-webkit-keyframes animar{
-    0%{-webkit-transform:translate(0px,0px);}
-    10%{-webkit-transform:translate(40px,20px);}
-    20%{-webkit-transform:translate(0px,0px);}
-    30%{-webkit-transform:translate(40px,20px);}
-    40%{-webkit-transform:translate(0px,0px);}
-    50%{-webkit-transform:translate(40px,20px);}
-    60%{-webkit-transform:translate(0px,0px);}
-    70%{-webkit-transform:translate(40px,20px);}
-    80%{-webkit-transform:translate(0px,0px);}
-    90%{-webkit-transform:translate(40px,20px);}
-    100%{-webkit-transform:translate(0px,0px);}
-}
+    .temblor{
+    }
+    @-webkit-keyframes animar{
+        0%{-webkit-transform:translate(0px,0px);}
+        10%{-webkit-transform:translate(40px,20px);}
+        20%{-webkit-transform:translate(0px,0px);}
+        30%{-webkit-transform:translate(40px,20px);}
+        40%{-webkit-transform:translate(0px,0px);}
+        50%{-webkit-transform:translate(40px,20px);}
+        60%{-webkit-transform:translate(0px,0px);}
+        70%{-webkit-transform:translate(40px,20px);}
+        80%{-webkit-transform:translate(0px,0px);}
+        90%{-webkit-transform:translate(40px,20px);}
+        100%{-webkit-transform:translate(0px,0px);}
+    }
 
-.temblor:hover{
-    -webkit-animation: animar 1s 10;
+    .temblor:hover{
+        -webkit-animation: animar 1s 10;
+    }
 }
