--- a/src/main/resources/templates/fragments/exito.html
+++ b/src/main/resources/templates/fragments/exito.html
@@ -1,4 +1,4 @@
-    <div th:if="${exito != null}" class="card text-white bg-success mb-3 mt-3 mensajeExito" style="float: right; margin: 10px;">
+    <div th:if="${exito != null}" class="card text-white bg-success mb-3 mt-3 mensajeExito">
         <div class="card-body">
             <h5 class="card-title">Exito</h5>
             <p class="card-text" th:text="${exito}"></p>
