--- a/src/main/resources/templates/crear_publicacion.html
+++ b/src/main/resources/templates/crear_publicacion.html
@@ -13,11 +13,10 @@
                 <img class="headbangersLogo" src="../images/headbangersLogo.png" alt="Headbangers Cave">
             </a>
         </span>
-        <div class="navbarBotones">
-            <button class="btn btn-warning">
-                <a class="text-decoration-none text-dark" th:href="@{/usuario/dashboard}">Volver</a>
-            </button>
-        </div>
+        <ul class="nav">
+            <li><a class="btn btn-warning m-1" th:href="@{/usuario/dashboard}">Volver</a>
+            </li>
+        </ul>
     </nav>
 
     <h2 class="reesplandor" style="margin: 20px 0px 5px 10px">Crear Publicación</h2>
