--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -118,12 +118,42 @@ body{
     width: 100%;
 }
 
-.navbarBotones {
+.nav {
+    margin:auto;
+    text-decoration: none;
+    list-style: none;
     position:absolute;
-    margin-top: 10px;
-    top:0; 
-    right:0;
+    top:5px; 
+    right:0px;
 }
+.nav li a{
+    width:100px;
+    background-color: black;
+    color:white;
+    display:block;
+    padding:10px;
+    display:block;
+    font-size: 12px;
+    text-align: center;
+}
+ul, ol{
+    list-style: none;
+    padding:0px;
+}
+
+.nav li ul{
+    display:none;
+    position:absolute;
+    z-index: 1;
+    position:relative;
+    top:0; 
+    right:-5px;
+}
+.nav li:hover > ul{
+    display:block;
+    float:left;
+}
+
 .mensajeExito{
     float: right; 
     margin: 10px;
