--- a/src/main/resources/templates/lista_usuarios.html
+++ b/src/main/resources/templates/lista_usuarios.html
@@ -12,11 +12,10 @@
                 <img class="headbangersLogo" src="/images/headbangersLogo.png" alt="Headbangers Cave">
             </a>
         </span>
-        <div class="navbarBotones">
-            <button class="btn btn-warning">
-                <a class="text-decoration-none text-dark" th:href="@{/usuario/dashboard}">Volver</a>
-            </button>
-        </div>
+        <ul class="nav">
+            <li><a class="btn btn-warning m-1" th:href="@{/usuario/dashboard}">Volver</a>
+            </li>
+        </ul>
     </nav>
     <p class="reesplandor" style="text-align: left; font-weight: bold; margin: 10px 0px 0px 5px">Lista de Headbangers</p>
 
