--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,13 +7,14 @@
 </head>
 
 <body id='fondoBienvenida'>
-    <div class='temblor'>
+    <div class="temblor">
         <a th:href="@{/publicaciones}" >
             <img class="logoBienvenida" src="../images/headbangersLogo.png" alt="Bienvenido a headbangers cave">
         </a>
     </div>
-
-    <div class="footer" th:replace="fragments/footer.html"></div>
+<div class="reesplandor" style="font-family: inherit; font-size: 30px; height: 400px; display:flex;justify-content: center; align-items: center">Toca en el Logo para acceder
+</div>
+<div class="footer" th:replace="fragments/footer.html"></div>
 
 </body>
 </html>
