--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
             <img class="logoBienvenida" src="../images/headbangersLogo.png" alt="Bienvenido a headbangers cave">
         </a>
     </div>
-<div class="reesplandor" style="font-family: inherit; font-size: 30px; height: 400px; display:flex;justify-content: center; align-items: center">Toca en el Logo para acceder
+<div class="reesplandor" style="font-family: inherit; font-size: 15px;font-weight: bold ; height: 550px; display:flex; justify-content: center; align-items: center">Toca en el logo para acceder
 </div>
 <div class="footer" th:replace="fragments/footer.html"></div>
 
