--- a/src/main/resources/templates/publicaciones.html
+++ b/src/main/resources/templates/publicaciones.html
@@ -50,7 +50,7 @@
             <center>Bienvenidx a Headbangers Cave!</center>
         </h2>
         <h3 class="texto" id="texto2"> 
-           Un espacio musical abierto a todas las personas melómanas que gozan al revolear los cabellos en cualquier momento y lugar para luego descansar en la oscuridad de un misterioso arpegio acolchado con solos orgásmicos y voces melódicas!
+           Un espacio musical abierto a todas las personas melómanas que gozan al revolear los cabellos en cualquier momento y lugar, para luego descansar en la oscuridad de un misterioso arpegio acolchado con solos orgásmicos y voces melódicas!
            <br>Este es tu sitio para compartir ese tema o video que tantas veces repetiste y no dejó de girar en tu cabeza.
            <br>Un paraje de la Web donde podras documentar tu enigmatico hallazgo para revivirlo cuando quieras!
         </h3>
