--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 
     <head>
     <div th:replace="fragments/head.html"></div>
-    <title>\ \ \ \ \ \ Headbangers Cave / / / / / /</title>
+    <title>Headbangers Cave</title>
 </head>
 
 <body id='fondoBienvenida'>
